--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,15 @@
 <body>
     <header>
         <div class="logo">
-            <img src="https://via.placeholder.com/280x140.png" alt="Movie Database Logo">
+            <a href="index.html">
+                <img src="https://via.placeholder.com/200x120.png" alt="Movie Database Logo">
+            </a>
         </div>
         <nav>
             <ul>
-                <li><a href="#coming-soon">Coming Soon</a></li>
-                <li><a href="#now-showing">Now Showing</a></li>
-                <li><a href="#recommendations">Recommendations</a></li>
+                <li class="inactive-nav"><a href="#coming-soon">Coming Soon</a></li>
+                <li class="active-nav"><a href="index.html">Now Showing</a></li>
+                <li class="inactive-nav"><a href="#recommendations">Recommendations</a></li>
             </ul>
         </nav>
         <div class="search-bar">
@@ -23,9 +25,49 @@
             <button type="submit">Search</button>
         </div>
     </header>
-
-    <div class="main-poster">
-        <img src= "./images/poster-h.jpeg" alt="Main Feature Image">
+    <div class="center-text">
+        Now Showing
+    </div>
+    <div class="carousel">
+        <div class="carousel-container">
+            <div class="card enlarged">
+                <a href="detail_page.html">
+                <img src="https://via.assets.so/movie.png?id=1&q=95&w=200&h=300&fit=fill" alt="Placeholder Image">
+                </a>
+                <p>Card 1</p>
+            </div>
+            <div class="card">
+                <a href="detail_page.html">
+                <img src="https://via.assets.so/movie.png?id=2&q=95&w=200&h=300&fit=fill" alt="Placeholder Image">
+                </a>
+                <p>Card 2</p>
+            </div>
+            <div class="card">
+                <a href="detail_page.html">
+                <img src="https://via.assets.so/movie.png?id=3&q=95&w=200&h=300&fit=fill" alt="Placeholder Image">
+                </a>
+                <p>Card 3</p>
+            </div>
+            <div class="card">
+                <a href="detail_page.html">
+                <img src="https://via.assets.so/movie.png?id=4&q=95&w=200&h=300&fit=fill" alt="Placeholder Image">
+                </a>
+                <p>Card 4</p>
+            </div>
+            <div class="card">
+                <a href="detail_page.html">
+                <img src="https://via.assets.so/movie.png?id=5&q=95&w=200&h=300&fit=fill" alt="Placeholder Image">
+                </a>
+                <p>Card 5</p>
+            </div>
+        </div>
+        <div class="dots">
+            <span class="dot active"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
     </div>
 
     <footer>
@@ -37,5 +79,6 @@
             <img src="https://via.placeholder.com/50.png" alt="Placeholder Image">
         </div>
     </footer>
+    <script src="./js/index.js"></script>
 </body>
 </html>
