refined index and detail page
carousel element working properly. dynamic data pulled from tmdb using JS.

--- a/src/detail_page.html
+++ b/src/detail_page.html
@@ -28,22 +28,22 @@
 
     <div class="container">
         <div class="poster">
-            <img src="https://via.assets.so/movie.png?id=1&q=95&w=200&h=300&fit=fill" alt="Movie Poster">
+            <img src="" alt="Movie Poster">
         </div>
         <div class="details">
             <h1>Movie Title</h1>
-            <p><strong>Director:</strong> Director Name</p>
-            <p><strong>Stars:</strong> Actor 1, Actor 2, Actor 3</p>
-            <p><strong>Release Date:</strong> Release Date Here</p>
-            <p><strong>Runtime:</strong> 120 minutes</p>
-            <p><strong>Description: </strong> This is a detailed description of the movie. It covers the plot, themes, and significant moments in the film. This section can be expanded to include additional information such as critical reception, box office performance, and trivia about the movie's production.</p>
-            
-            <h2>Showtimes</h2>
-            <p><strong>Cinema One:</strong> 12:00 PM, 3:00 PM, 6:00 PM</p>
-            <p><strong>Cinema Two:</strong> 1:00 PM, 4:00 PM, 7:00 PM</p>
-            <p><strong>Cinema Three:</strong> 2:00 PM, 5:00 PM, 8:00 PM</p>
+            <p id="date"><strong>Release Date:</strong> Release Date Here</p>
+            <p id="runtime"><strong>Runtime:</strong> 120 minutes</p>
+            <p id="overview"><strong>Description: </strong> This is a detailed description of the movie. It covers the plot, themes, and significant moments in the film. This section can be expanded to include additional information such as critical reception, box office performance, and trivia about the movie's production.</p>
+            <p id="vote"><strong>Average Vote:</strong> 0.0 (0 Votes)</p>
+
+            <h2>Get Tickets</h2>
+            <div id="showtimes">
+                <!-- Showtimes will be dynamically generated here -->
+            </div>
         </div>
     </div>
+
 
     <footer>
         <div class="footer-links">
@@ -54,6 +54,6 @@
             <img src="https://via.placeholder.com/50.png" alt="Placeholder Image">
         </div>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="./js/detail_page.js"></script>
 </body>
 </html>
