--- a/src/index.html
+++ b/src/index.html
@@ -28,46 +28,15 @@
     <div class="center-text">
         Now Showing
     </div>
-    <div class="carousel">
-        <div class="carousel-container">
-            <div class="card enlarged">
-                <a href="detail_page.html">
-                <img src="https://via.assets.so/movie.png?id=1&q=95&w=200&h=300&fit=fill" alt="Placeholder Image">
-                </a>
-                <p>Card 1</p>
-            </div>
-            <div class="card">
-                <a href="detail_page.html">
-                <img src="https://via.assets.so/movie.png?id=2&q=95&w=200&h=300&fit=fill" alt="Placeholder Image">
-                </a>
-                <p>Card 2</p>
-            </div>
-            <div class="card">
-                <a href="detail_page.html">
-                <img src="https://via.assets.so/movie.png?id=3&q=95&w=200&h=300&fit=fill" alt="Placeholder Image">
-                </a>
-                <p>Card 3</p>
-            </div>
-            <div class="card">
-                <a href="detail_page.html">
-                <img src="https://via.assets.so/movie.png?id=4&q=95&w=200&h=300&fit=fill" alt="Placeholder Image">
-                </a>
-                <p>Card 4</p>
-            </div>
-            <div class="card">
-                <a href="detail_page.html">
-                <img src="https://via.assets.so/movie.png?id=5&q=95&w=200&h=300&fit=fill" alt="Placeholder Image">
-                </a>
-                <p>Card 5</p>
-            </div>
+
+    <div class="carousel-container">
+        <button class="carousel-btn left-btn" onclick="prevCard()">&#9664;</button>
+        <div class="carousel">
+            <!-- empty carousel to be populated by js -->
         </div>
-        <div class="dots">
-            <span class="dot active"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div>
+        <button class="carousel-btn right-btn" onclick="nextCard()">&#9654;</button>
+    </div>
+
     </div>
 
     <footer>
