--- a/src/recommendations.html
+++ b/src/recommendations.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recommendations</title>
+    <title>For you | JFQ Movies </title>
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Monsieur+La+Doulaise&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 
 
@@ -53,8 +54,8 @@
 
         #movies {
             margin-top: 20px;
+            min-height: 70vh;
             width: 100%;
-            max-width: fit-content;
             margin: auto;
             display: flex;
             flex-wrap: wrap;
@@ -66,7 +67,7 @@
             padding: 10px;
             border-radius: 15px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-            width: calc(25% - 20px); /* Change this line */
+            width: calc(25% - 20px); 
             box-sizing: border-box;
         }
         .movie-item img {
@@ -82,14 +83,14 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="https://via.placeholder.com/200x120.png" alt="Movie Database Logo">
+                <img src="image/logo.png" alt="JFQ Movies Logo">
             </a>
         </div>
         <nav>
             <ul>
-                <li class="inactive-nav"><a href="#coming-soon">Coming Soon</a></li>
-                <li class="active-nav"><a href="index.html">Now Showing</a></li>
-                <li class="inactive-nav"><a href="recommendations.html">Recommendations</a></li>
+                <li class="inactive-nav"><a href="coming_soon.html">Coming Soon</a></li>
+                <li class="inactive-nav"><a href="index.html">Now Showing</a></li>
+                <li class="active-nav"><a href="recommendations.html">For You</a></li>
             </ul>
         </nav>
         <div class="search-bar">
@@ -116,7 +117,7 @@
             <a href="#contact">Contact</a>
         </div>
         <div class="footer-logo">
-            <img src="https://via.placeholder.com/50.png" alt="Placeholder Image">
+            <img src="image/user_icon.png" alt="User Profile">
         </div>
     </footer>
     <script src="./js/recommendations.js"></script>
