--- a/src/index.html
+++ b/src/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Database</title>
+    <title> Showing Now | JFQ Movies </title>
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Monsieur+La+Doulaise&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="https://via.placeholder.com/200x120.png" alt="Movie Database Logo">
+                <img src="image/logo.png" alt="JFQ Movies Logo">
             </a>
         </div>
         <nav>
             <ul>
-                <li class="inactive-nav"><a href="#coming-soon">Coming Soon</a></li>
+                <li class="inactive-nav"><a href="coming_soon.html">Coming Soon</a></li>
                 <li class="active-nav"><a href="index.html">Now Showing</a></li>
-                <li class="inactive-nav"><a href="#recommendations.html">Recommendations</a></li>
+                <li class="inactive-nav"><a href="recommendations.html">For You</a></li>
             </ul>
         </nav>
         <div class="search-bar">
@@ -25,9 +26,6 @@
             <button type="submit">Search</button>
         </div>
     </header>
-    <div class="center-text">
-        Now Showing
-    </div>
 
     <div class="carousel-container">
         <button class="carousel-btn left-btn" onclick="prevCard()">&#9664;</button>
@@ -45,7 +43,7 @@
             <a href="#contact">Contact</a>
         </div>
         <div class="footer-logo">
-            <img src="https://via.placeholder.com/50.png" alt="Placeholder Image">
+            <img src="image/user_icon.png" alt="User Profile">
         </div>
     </footer>
     <script src="./js/index.js"></script>
