--- a/src/book_ticket.html
+++ b/src/book_ticket.html
@@ -63,18 +63,18 @@
         <p id="venue-time"> at Cinema X, XX:XX pm </p>
         <form id="form">
             <label for="cardholder-name">Cardholder Name</label>
-            <input type="text" id="cardholder-name" name="cardholder-name" required>
+            <input type="text" id="cardholder-name" aria-label="Cardholder Name" name="cardholder-name" required>
 
             <label for="card-number">Card Number</label>
-            <input type="text" id="card-number" name="card-number" required>
+            <input type="text" id="card-number" aria-label="Card Number" name="card-number" required>
 
             <label for="expiry-date">Expiry Date</label>
-            <input type="text" id="expiry-date" name="expiry-date" placeholder="MM/YY" required>
+            <input type="text" id="expiry-date" aria-label="Expiry Date" name="expiry-date" placeholder="MM/YY" required>
 
             <label for="cvv">CVV</label>
-            <input type="text" id="cvv" name="cvv" required>
+            <input type="text" id="cvv" aria-label="CVV Number" name="cvv" required>
 
-            <button type="submit">Submit Payment</button>
+            <button type="submit" aria-label="Make Payment">Submit</button>
         </form>
     </div>
 <script src="./js/book_ticket.js"></script>
