--- a/src/detail_page.html
+++ b/src/detail_page.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="image/logo.png" alt="JFQ Movies Logo">
+                <img src="image/logo.png" alt="JFQ Movies Logo" aria-label="Back to Home Page">
             </a>
         </div>
         <nav>
@@ -23,7 +23,7 @@
         </nav>
         <div class="search-bar">
             <input type="text" placeholder="Search movies...">
-            <button type="submit">Search</button>
+            <button type="submit" aria-label="Search Movie by Name">Search</button>
         </div>
     </header>
 
@@ -52,7 +52,7 @@
             <a href="#contact">Contact</a>
         </div>
         <div class="footer-logo">
-            <img src="image/user_icon.png" alt="User Profile">
+            <img src="image/user_icon.png" alt="User Profile" aria-label="Open User Profile">
         </div>
     </footer>
     <script src="./js/detail_page.js"></script>
